fix: 플랫폼별 폴더 구조 개선

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(ldpreload_hook LANGUAGES C CXX)
 
 include(CheckIncludeFile)
 
+# TODO: update target source lists to new src/common and src/platform layout
 # ── 공통 설정
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -16,7 +17,13 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 # 헤더 경로
-include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/include/common
+    ${CMAKE_SOURCE_DIR}/include/platform
+    ${CMAKE_SOURCE_DIR}/include/platform/linux
+    ${CMAKE_SOURCE_DIR}/include/platform/windows
+)
 
 # OpenSSL 필요 (openssl 훅/테스트)
 find_package(OpenSSL REQUIRED)
@@ -47,11 +54,14 @@ endif()
 
 # ── Platform-specific hook sources
 if(WIN32)
-    set(PLATFORM_HOOK_SRCS
-        src/Windows/windows_hook_dll.cpp
-        src/Windows/hooks/hook_openssl_detours.cpp
-        src/Windows/hooks/hook_openssl_state.cpp
+    set(HOOK_SRCS
+        src/platform/windows/core/windows_hook_dll.cpp
+        src/platform/windows/hooks/hook_openssl_detours.cpp
+        src/platform/windows/hooks/hook_openssl_state.cpp
+        src/platform/windows/utils/output.cpp
+        src/platform/windows/utils/crypto_utils.cpp
     )
+
     # Windows-specific libraries
     find_package(detours QUIET)
     if(NOT detours_FOUND)
@@ -69,70 +79,38 @@ if(WIN32)
             message(STATUS "Found Detours: ${DETOURS_INCLUDE_DIR}")
         endif()
     endif()
-else()
-    set(PLATFORM_HOOK_SRCS
-        # Linux hooks (existing)
-        src/Linux/hooks/hook_af_alg.cpp
-        src/Linux/hooks/hook_openssl_core.cpp
-        src/Linux/hooks/hook_openssl_ecc.cpp
-        src/Linux/hooks/hook_openssl_provider.cpp
-        src/Linux/hooks/hook_openssl_state.cpp
-        src/Linux/hooks/hook_cryptodev.cpp
-        src/Linux/hooks/hook_libsodium.cpp
-        src/Linux/hooks/hook_gnutls.cpp
-        src/Linux/hooks/hook_mbedtls.cpp
-        src/Linux/hooks/hook_nss.cpp
-        src/Linux/hooks/hook_wolfssl.cpp
-        src/Linux/hooks/hook_boringssl.cpp
-        src/Linux/hooks/hook_java_native_crypto.cpp
-        src/Linux/hooks/hook_jni.cpp
-        src/Linux/hooks/hook_pycryptodome.cpp
-    )
-endif()
-
-# ── Hook 라이브러리 소스
-set(HOOK_SRCS)
-
-# Platform-specific sources
-if(WIN32)
-    list(APPEND HOOK_SRCS
-        ${PLATFORM_HOOK_SRCS}
-        # Windows-specific utilities
-        src/Windows/utils/output.cpp
-        src/Windows/utils/crypto_utils.cpp
-    )
 elseif(UNIX)
-    list(APPEND HOOK_SRCS
-        src/init.cpp  # Linux-specific initialization
-        src/log.cpp   # Linux-specific logging
-        src/utils/output.cpp  # Linux NDJSON output
-        src/utils/crypto_utils.cpp  # Linux crypto utilities
-        src/resolver.cpp  # Linux-specific symbol resolution
-        src/utils/elf_analyzer.cpp  # Linux-specific ELF analysis
-        src/Linux/hooks/hook_openssl_core.cpp
-        src/Linux/hooks/hook_openssl_provider.cpp
-        src/Linux/hooks/hook_openssl_ecc.cpp
-        src/Linux/hooks/hook_openssl_state.cpp  # OpenSSL state management
-        src/Linux/hooks/hook_pycryptodome.cpp
+    set(HOOK_SRCS
+        src/platform/linux/core/init.cpp
+        src/platform/linux/core/log.cpp
+        src/platform/linux/core/resolver.cpp
+        src/platform/linux/utils/output.cpp
+        src/platform/linux/utils/crypto_utils.cpp
+        src/platform/linux/utils/elf_analyzer.cpp
+        src/platform/linux/hooks/hook_openssl_core.cpp
+        src/platform/linux/hooks/hook_openssl_provider.cpp
+        src/platform/linux/hooks/hook_openssl_ecc.cpp
+        src/platform/linux/hooks/hook_openssl_state.cpp
+        src/platform/linux/hooks/hook_pycryptodome.cpp
     )
 
     if(ENABLE_LIBSODIUM)
-        list(APPEND HOOK_SRCS src/Linux/hooks/hook_libsodium.cpp)
+        list(APPEND HOOK_SRCS src/platform/linux/hooks/hook_libsodium.cpp)
     endif()
 
     if(ENABLE_AF_ALG)
-        list(APPEND HOOK_SRCS src/Linux/hooks/hook_af_alg.cpp)
+        list(APPEND HOOK_SRCS src/platform/linux/hooks/hook_af_alg.cpp)
     endif()
 
     if(ENABLE_CRYPTODEV)
-        list(APPEND HOOK_SRCS src/Linux/hooks/hook_cryptodev.cpp)
+        list(APPEND HOOK_SRCS src/platform/linux/hooks/hook_cryptodev.cpp)
     endif()
 
     if(JNI_FOUND)
         list(APPEND HOOK_SRCS
-        src/Linux/hooks/hook_jni.cpp
-        src/Linux/hooks/hook_java_native_crypto.cpp
-            src/utils/java_crypto_utils.cpp
+            src/platform/linux/hooks/hook_jni.cpp
+            src/platform/linux/hooks/hook_java_native_crypto.cpp
+            src/platform/linux/utils/java_crypto_utils.cpp
         )
     endif()
 else()
@@ -140,7 +118,7 @@ else()
 endif()
 
 add_library(hook SHARED ${HOOK_SRCS})
-target_precompile_headers(hook PRIVATE ${CMAKE_SOURCE_DIR}/include/pch.h)
+target_precompile_headers(hook PRIVATE ${CMAKE_SOURCE_DIR}/include/common/pch.h)
 
 # Platform-specific compilation and linking
 if(WIN32)
@@ -227,7 +205,7 @@ find_library(GNUTLS_LIBRARY gnutls)
 if(GNUTLS_INCLUDE_DIR AND GNUTLS_LIBRARY)
     set(GNUTLS_FOUND ON)
     include_directories(${GNUTLS_INCLUDE_DIR})
-    target_sources(hook PRIVATE src/Linux/hooks/hook_gnutls.cpp)
+    target_sources(hook PRIVATE src/platform/linux/hooks/hook_gnutls.cpp)
     add_executable(gnutls_aes_gcm_demo tests/GnuTLS/symmetric/gnutls_aes_gcm_demo.c)
     target_include_directories(gnutls_aes_gcm_demo PRIVATE ${GNUTLS_INCLUDE_DIR})
     target_link_libraries(gnutls_aes_gcm_demo PRIVATE ${GNUTLS_LIBRARY})
@@ -254,7 +232,7 @@ find_library(PLC4_LIBRARY plc4)
 if(NSS_INCLUDE_DIR AND NSPR_INCLUDE_DIR AND P11KIT_INCLUDE_DIR AND NSS3_LIBRARY AND NSPR4_LIBRARY AND PLDS4_LIBRARY AND PLC4_LIBRARY)
     set(NSS_FOUND ON)
     include_directories(${NSS_INCLUDE_DIR} ${NSPR_INCLUDE_DIR} ${P11KIT_INCLUDE_DIR})
-    target_sources(hook PRIVATE src/Linux/hooks/hook_nss.cpp)
+    target_sources(hook PRIVATE src/platform/linux/hooks/hook_nss.cpp)
     add_executable(nss_aes_gcm_demo tests/NSS/symmetric/nss_aes_gcm_demo.c)
     target_include_directories(nss_aes_gcm_demo PRIVATE ${NSS_INCLUDE_DIR})
     target_link_libraries(nss_aes_gcm_demo PRIVATE ${NSS3_LIBRARY} ${NSPR4_LIBRARY} ${PLDS4_LIBRARY} ${PLC4_LIBRARY})
@@ -279,7 +257,7 @@ if(ENABLE_MBEDTLS)
     if(MBEDTLS_INCLUDE_DIR AND MBEDTLS_CRYPTO_LIBRARY)
         set(MBEDTLS_FOUND ON)
         include_directories(${MBEDTLS_INCLUDE_DIR})
-        target_sources(hook PRIVATE src/Linux/hooks/hook_mbedtls.cpp)
+        target_sources(hook PRIVATE src/platform/linux/hooks/hook_mbedtls.cpp)
         add_executable(mbedtls_aes_gcm_demo tests/mbedTLS/symmetric/mbedtls_aes_gcm_demo.c)
         target_link_libraries(mbedtls_aes_gcm_demo PRIVATE ${MBEDTLS_CRYPTO_LIBRARY})
 
@@ -305,7 +283,7 @@ find_path(WOLFSSL_INCLUDE_DIR wolfssl/wolfcrypt/aes.h)
 find_library(WOLFSSL_LIBRARY wolfssl)
 if(WOLFSSL_INCLUDE_DIR AND WOLFSSL_LIBRARY)
     set(WOLFSSL_FOUND ON)
-    target_sources(hook PRIVATE src/Linux/hooks/hook_wolfssl.cpp)
+    target_sources(hook PRIVATE src/platform/linux/hooks/hook_wolfssl.cpp)
     target_include_directories(hook PRIVATE ${WOLFSSL_INCLUDE_DIR})
     add_executable(wolfssl_aes_gcm_demo tests/wolfSSL/symmetric/wolfssl_aes_gcm_demo.c)
     target_include_directories(wolfssl_aes_gcm_demo PRIVATE ${WOLFSSL_INCLUDE_DIR})
@@ -346,8 +324,8 @@ find_library(BORINGSSL_CRYPTO_LIBRARY crypto
              NO_DEFAULT_PATH)
 if(BORINGSSL_INCLUDE_DIR AND BORINGSSL_CRYPTO_LIBRARY)
     set(BORINGSSL_FOUND ON)
-    target_sources(hook PRIVATE src/Linux/hooks/hook_boringssl.cpp)
-    set_source_files_properties(src/Linux/hooks/hook_boringssl.cpp
+    target_sources(hook PRIVATE src/platform/linux/hooks/hook_boringssl.cpp)
+    set_source_files_properties(src/platform/linux/hooks/hook_boringssl.cpp
         PROPERTIES
             COMPILE_FLAGS "-I${BORINGSSL_INCLUDE_DIR}")
     add_executable(boringssl_aes_gcm_demo tests/boringSSL/symmetric/boringssl_aes_gcm_demo.cc)
@@ -396,7 +374,7 @@ if(ENABLE_CRYPTODEV)
 endif()
 
 # ── 동적 분석 CLI (LD_PRELOAD 주입 자동화)
-add_executable(dynamic_analysis_cli src/main.cpp src/dynamic_analysis.cpp)
+add_executable(dynamic_analysis_cli src/common/main.cpp src/common/dynamic_analysis.cpp)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "9")
     target_link_libraries(dynamic_analysis_cli PRIVATE stdc++fs)
@@ -503,7 +481,7 @@ foreach(tgt IN LISTS TEST_TARGETS)
      NOT tgt STREQUAL "cryptodev_aes_cbc_demo" AND
      NOT tgt STREQUAL "cryptodev_hmac_sha256_demo" AND
      NOT tgt STREQUAL "cryptodev_rsa_demo")
-    target_precompile_headers(${tgt} PRIVATE ${CMAKE_SOURCE_DIR}/include/pch.h)
+    target_precompile_headers(${tgt} PRIVATE ${CMAKE_SOURCE_DIR}/include/common/pch.h)
   endif()
 endforeach()
 
